[package]
name = "drive-adv"
version = "0.1.0"
authors = ["alex wennerberg <alex@alexwennerberg.com>"]
edition = "2018"
license = "MIT"
description = "Advanced auditing tools for Google Drive"
homepage = "https://github.com/alexwennerberg/drive-adv"
documentation = "https://github.com/alexwennerberg/drive-adv"
repository = "https://github.com/alexwennerberg/drive-adv"
keywords = ["Google", "Drive"]

[dependencies]
base64 = "0.11"
chrono = "0.4"
clap = "2.33"
diesel = { version = "1.4.3", features = ["postgres", "serde_json",  "64-column-tables"] }
dotenv = "^0"
env_logger = "0.7"
jsonwebtoken = "6"
log = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = {version = "0.10.0-alpha.2", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
